[fix] quote text too dark in night mode

--- a/typora-theme-onigiri/onigiri-night.css
+++ b/typora-theme-onigiri/onigiri-night.css
@@ -285,7 +285,7 @@ blockquote {
 blockquote,
 blockquote p {
   line-height: 1.6;
-  color: #8f6f6f;
+  color: #EBB7B7;
 }
 
 #write pre.md-meta-block {
